--- a/Test/Makefile
+++ b/Test/Makefile
@@ -48,10 +48,10 @@ RM = /usr/bin/cmake -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /home/saammmy/CV/Test
+CMAKE_SOURCE_DIR = /home/saammmy/Computer-Vision/Test
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /home/saammmy/CV/Test
+CMAKE_BINARY_DIR = /home/saammmy/Computer-Vision/Test
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -80,9 +80,9 @@ edit_cache/fast: edit_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/saammmy/CV/Test/CMakeFiles /home/saammmy/CV/Test/CMakeFiles/progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/saammmy/Computer-Vision/Test/CMakeFiles /home/saammmy/Computer-Vision/Test/CMakeFiles/progress.marks
 	$(MAKE) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/saammmy/CV/Test/CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/saammmy/Computer-Vision/Test/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
